konst/tests/misc_tests/misc_nonmacro_ui_tests/array_builder_constructor_btype_err.rs
use konst::array::ArrayBuilder;


fn main() {
    let _ = ArrayBuilder::<String, 3, _>::of_drop().into_copy();
}

